<resources>
    <string name="app_name">chat app</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="add_new_chat">add new chat</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="or_login_with">or login with</string>
    <string name="have_no_account">Have no account ?</string>
    <string name="have_account">Have account ?</string>
    <string name="sign_up">Sign-up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="user_name">User name</string>
    <string name="type_something">type something</string>
    <string name="new_room">New Room</string>
    <string name="join">join</string>
    <string name="create">create</string>
    <string name="room_name">Room name</string>
    <string name="room_type">Room type</string>
    <string name="enter_room_name">Enter Room Name</string>
    <string name="enter_room_password">Enter Room Password</string>
    <string name="room_id">Room Id :</string>
    <string name="enter_room_id">Enter Room Id</string>
    <string name="logout">logOut</string>
    <string name="signup">Sign Up</string>
    <string name="firebase_client_id">280685173349-4pkvdtpc0f82kbetn6li6fp3mfs6fed6.apps.googleusercontent.com</string>
    <string name="edit_image">Edit Image</string>
    <string name="camera">camera</string>
    <string name="gallery">gallery</string>
    <string name="enter_new_name">Enter new Name</string>
    <string name="room_password">Room Password</string>
    <string name="roomid">room ID</string>
    <string name="change_background">change background</string>
    <string name="show_room_members">show room members</string>
    <string name="record">record</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">dark mode</string>
    <string name="developed_by">Developed by</string>
    <string name="mohamed_emad">Mohamed Emad</string>
    <string name="image_quality">low quality image</string>
    <string name="notifications">notifications</string>
    <string name="group_chats">Group chats</string>
    <string name="profile">profile</string>
    <string name="save">save</string>
    <string name="direct_chat">Direct chat</string>
    <string name="show">show</string>
    <string name="change">change</string>
    <string name="enter_user_id">Enter user id</string>
    <string name="add">add</string>
    <string name="undo">undo</string>
</resources>