<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".presentation.settings.SettingsFragment">
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/btn_back_arrow"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:background="?attr/selectableItemBackground"
        android:elevation="20dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/baseline_arrow_back_24"
        app:tint="@color/blue_white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:textColor="@color/blue_white"
        android:text="@string/settings"
        android:background="@color/dark_blue_top_bar"
        android:textSize="18sp"
        android:layout_marginTop="-43dp"
        android:gravity="center"
        />

    <LinearLayout
        android:id="@+id/btn_dark_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/setting_item"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="8dp"
        android:paddingVertical="4dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_white"
            android:text="@string/dark_mode"
            android:textSize="18sp"
            android:layout_marginStart="16sp"
            android:gravity="center"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_dark_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:thumb="@drawable/thumb"
            app:track="@drawable/track"
            android:layout_marginEnd="16sp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_img_quality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/setting_item"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:paddingVertical="4dp"
        android:layout_marginHorizontal="8dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_white"
            android:text="@string/image_quality"
            android:textSize="18sp"
            android:layout_marginStart="16sp"
            android:gravity="center"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_img_quality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            tools:checked="true"
            android:thumb="@drawable/thumb"
            app:track="@drawable/track"
            android:layout_marginEnd="16sp"
            />

    </LinearLayout>





<View
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/grey"
        android:text="@string/developed_by"
        android:textSize="14sp"
        android:gravity="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/blue_white"
        android:text="@string/mohamed_emad"
        android:textSize="12sp"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        />
</LinearLayout>