<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_corners"
    tools:context=".presentation.dialogs.AddRoomDialog">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/btn_cancel"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_margin="4dp"
        android:src="@drawable/ic_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
         />

    <TextView
        android:id="@+id/tv_room_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/corners_space"
        android:paddingVertical="10dp"
        android:text="@string/room_name"
        android:textColor="@color/main_text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_cancel" />


    <EditText
        android:id="@+id/et_room_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/corners_space"
        android:layout_marginTop="8dp"
        android:maxLines="1"
        android:layout_marginEnd="@dimen/corners_space"
        android:background="@drawable/app_edit_text"
        android:hint="@string/enter_room_name"
        android:paddingHorizontal="8dp"
        android:paddingVertical="15dp"
        android:maxLength="16"
        android:textColor="@color/dark_blue"
        android:textColorHint="@color/dark_blue"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_room_name" />


    <TextView
        android:id="@+id/tv_room_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/corners_space"
        android:layout_marginTop="16dp"
        android:paddingVertical="10dp"
        android:text="@string/room_type"
        android:textColor="@color/main_text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_room_name" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/btn_room_type"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="40dp"
        android:src="@drawable/ic_family_room"
        app:layout_constraintBottom_toBottomOf="@id/tv_room_type"
        app:layout_constraintEnd_toEndOf="@id/et_room_name"
        app:layout_constraintStart_toEndOf="@id/tv_room_type"
        app:layout_constraintTop_toTopOf="@id/tv_room_type"
        app:tint="@color/main_text" />


    <TextView
        android:id="@+id/tv_use_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/corners_space"
        android:layout_marginTop="12dp"
        android:paddingVertical="10dp"
        android:text="@string/password"
        android:textColor="@color/main_text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_room_type" />

    <CheckBox
        android:id="@+id/checkbox_password"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@drawable/app_check_btn"
        android:checked="true"
        app:layout_constraintBottom_toBottomOf="@id/tv_use_password"
        app:layout_constraintEnd_toEndOf="@id/btn_room_type"
        app:layout_constraintStart_toStartOf="@id/btn_room_type"
        app:layout_constraintTop_toTopOf="@id/tv_use_password" />


    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/corners_space"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/corners_space"
        android:background="@drawable/app_edit_text"
        android:hint="@string/enter_room_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingHorizontal="8dp"
        android:paddingVertical="15dp"
        android:textColor="@color/dark_blue"
        android:textColorHint="@color/dark_blue"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_use_password" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_create_new_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/app_button"
        android:text="@string/create"
        android:textColor="@color/blue_white"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password" />


</androidx.constraintlayout.widget.ConstraintLayout>