<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_corners"
    tools:context=".presentation.dialogs.AddRoomDialog">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/btn_cancel"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_margin="4dp"
        android:elevation="20dp"
        android:src="@drawable/ic_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
       />

    <TextView
        android:id="@+id/tv_new_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_room"
        android:textColor="@color/blue_white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_cancel" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/app_button"
        android:text="@string/join"
        android:textColor="@color/blue_white"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_create_new_room"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_new_room" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_create_new_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/app_button"
        android:text="@string/create"
        android:textColor="@color/blue_white"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@id/btn_join"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_join"
        app:layout_constraintTop_toTopOf="@id/btn_join" />


</androidx.constraintlayout.widget.ConstraintLayout>