<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:windowSoftInputMode="adjustResize"
    android:background="@drawable/black_blue_gradient"
    tools:context=".presentation.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/welcome"
            android:textColor="@color/blue_white"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/corners_space"
            android:layout_marginTop="50dp"
            android:text="@string/e_mail"
            android:textColor="@color/blue_white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome" />


        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/corners_space"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/corners_space"
            android:background="@drawable/app_edit_text"
            android:maxLines="1"
            android:paddingHorizontal="8dp"
            android:paddingVertical="10dp"
            android:textColor="@color/dark_blue"
            android:textColorHint="@color/light_blue"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_email"
            tools:text="email" />


        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/corners_space"
            android:layout_marginTop="10dp"
            android:text="@string/password"
            android:textColor="@color/blue_white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_email" />


        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/corners_space"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/corners_space"
            android:background="@drawable/app_edit_text"
            android:maxLines="1"
            android:paddingHorizontal="8dp"
            android:paddingVertical="10dp"
            android:inputType="textPassword"
            android:textColor="@color/dark_blue"
            android:textColorHint="@color/light_blue"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_password"
            tools:text="password" />


        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:paddingVertical="4dp"
            android:paddingEnd="8dp"
            android:text="forgot password!"
            android:textColor="@color/blue_white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/et_password"
            app:layout_constraintTop_toBottomOf="@id/et_password" />


        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:elevation="20dp"
            android:indeterminateTint="@color/black"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/btn_login"
            app:layout_constraintEnd_toEndOf="@id/btn_login"
            app:layout_constraintStart_toStartOf="@id/btn_login"
            app:layout_constraintTop_toTopOf="@id/btn_login" />

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/corners_space"
            android:layout_marginTop="25dp"
            android:background="@drawable/app_button"
            android:elevation="4dp"
            android:text="@string/login"
            android:textColor="@color/blue_white"
            app:initialCornerAngle="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_forgot_password"
            app:spinning_bar_color="@color/light_blue"
            app:spinning_bar_padding="2dp"
            app:spinning_bar_width="40dp" />


        <TextView
            android:id="@+id/tv_or_login_with"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/or_login_with"
            android:textColor="@color/blue_white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_or_login_with">

            <ImageView
                android:id="@+id/login_with_facebook"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:padding="1dp"
                android:src="@drawable/ic_facebook" />

            <ImageView
                android:id="@+id/login_with_google"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginStart="10dp"
                android:padding="5dp"
                android:src="@drawable/ic_google"
                app:layout_constraintTop_toBottomOf="@id/tv_or_login_with" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/signup_linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="4dp"
                android:paddingStart="4dp"
                android:text="@string/have_no_account"
                android:textColor="@color/blue_white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/sign_up"
                android:textColor="@color/light_blue"
                android:textSize="18sp" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>